教科書#6スキルチェックログ以外

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back"
     tools:context=".MainActivity">
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="100dp"
+        android:fontFamily="sans-serif-black"
+        android:text="これは素数？"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-black"
         android:text="0"
         android:textSize="64sp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
@@ -30,6 +44,7 @@
             android:layout_height="96dp"
             android:layout_weight="1"
             android:background="#FF0000"
+            android:fontFamily="sans-serif-black"
             android:onClick="maru"
             android:text="〇"
             android:textColor="#FFFFFF"
@@ -42,6 +57,7 @@
             android:layout_height="96dp"
             android:layout_weight="1"
             android:background="#0000FF"
+            android:fontFamily="sans-serif-black"
             android:onClick="batsu"
             android:text="×"
             android:textColor="#FFFFFF"
